Added content to the subpages

--- a/recipes/kebab.html
+++ b/recipes/kebab.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,5 +8,26 @@
 </head>
 <body>
    <h1>kebab</h1> 
+   <img src="../photos/kebab.jpg" alt="pyszny kebab">
+   <p>ulubiony przepis Polaka cebulaka</p>
+   
+   <h3>Składniki</h3>
+   <ul>
+    <li>pita</li>
+    <li>kurczak</li>
+    <li>warzywa</li>
+    <li>sos czosnkowy</li>
+   </ul>
+
+   <h3>Przygotowanie</h3>
+   <ol>
+    <li>otwórz pite</li>
+    <li>wsadź usmażonego kurczaka</li>
+    <li>dodaj warzywa</li>
+    <li>zalej sosem</li>
+   </ol>
+
+   <a href="../index.html">powrót do strony głównej</a>
+
 </body>
 </html>
