--- a/recipes/lasagne.html
+++ b/recipes/lasagne.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,5 +8,26 @@
 </head>
 <body>
     <h1>lasagne</h1>
+    
+   <img src="../photos/lasagne.jpg" alt="pyszna lasagne">
+   <p>ulubiony przysmak Garfielda</p>
+
+   <h3>Składniki</h3>
+   <ul>
+    <li>makaron</li>
+    <li>mielone mięso</li>
+    <li>warzywa</li>
+    <li>sos pomidorowy</li>
+   </ul>
+
+   <h3>Przygotowanie</h3>
+   <ol>
+    <li>ugotuj makaron</li>
+    <li>wnaprzemiennie układaj makaron, mięso i sos</li>
+    <li>wsadź do piekarnika na 30min </li>
+    <li>wyjmij danie z piekarnika</li>
+   </ol>
+
+   <a href="../index.html">powrót do strony głównej</a>
 </body>
 </html>
