--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,5 +8,26 @@
 </head>
 <body>
     <h1>pizza</h1>
+    
+   <img src="../photos/pizza.jpg" alt="pyszna pizza">
+   <p>smaczniutka picka prosto z samej italii</p>
+
+   <h3>Składniki</h3>
+   <ul>
+    <li>ciasto na pizze</li>
+    <li>ser</li>
+    <li>warzywa</li>
+    <li>sos pomidorowy</li>
+   </ul>
+
+   <h3>Przygotowanie</h3>
+   <ol>
+    <li>na ciasto wylej sos pomidorowy</li>
+    <li>posyp serem</li>
+    <li>dodaj warzywa</li>
+    <li>piecz 10min w piekarniku</li>
+
+    <a href="../index.html">powrót do strony głównej</a>
+   </ol>
 </body>
 </html>
